package com.mhm.action.strategy;

/**
 * 策略模式
 * @author MHm
 * @date 2020-4-19 19:32
 */
public interface IStrategy {
   double cash(double money);
}
